# qcategorizedview

./: CMakeLists.txt  qcategorizedsortfilterproxymodel.cpp  qcategorizedsortfilterproxymodel.h  qcategorizedsortfilterproxymodel_p.h  qcategorizedview.cpp  qcategorizedview.h  qcategorizedview_p.h  qcategorydrawer.cpp  qcategorydrawer.h
example/: CMakeLists.txt  main.cpp
example/items/: appearance.desktop  datetime.desktop  keyboardandmouse.desktop  languagesupport.desktop  power.desktop  screensaver.desktop  sound.desktop  systemusers.desktop
